--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "formik": "^2.4.6",
     "jspdf": "^2.5.2",
     "lucide-react": "^0.468.0",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
     "react-chartjs-2": "^5.3.0",
