--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "chart.js": "^4.4.7",
     "date-fns": "^4.1.0",
     "formik": "^2.4.6",
+    "framer-motion": "^12.6.3",
     "jspdf": "^2.5.2",
     "lucide-react": "^0.468.0",
     "moment": "^2.30.1",
