--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,7 @@
     "nodemon": "^3.1.7",
     "pdf-creator-node": "^2.3.5",
     "pdfkit": "^0.15.2",
+    "promisify": "^0.0.3",
     "puppeteer": "^23.11.1",
     "socket.io": "^4.8.1",
     "uuid": "^11.0.5"
