added job fair and attendance scanner

--- a/server/package.json
+++ b/server/package.json
@@ -30,6 +30,7 @@
     "pdfkit": "^0.15.2",
     "promisify": "^0.0.3",
     "puppeteer": "^23.11.1",
+    "qrcode": "^1.5.4",
     "socket.io": "^4.8.1",
     "uuid": "^11.0.5"
   }
