--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "date-fns": "^4.1.0",
     "formik": "^2.4.6",
     "framer-motion": "^12.6.3",
+    "html5-qrcode": "^2.3.8",
     "jspdf": "^2.5.2",
     "lucide-react": "^0.468.0",
     "moment": "^2.30.1",
@@ -26,6 +27,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.16.1",
     "socket.io-client": "^4.8.1",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5",
