--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "@sendgrid/mail": "^8.1.4",
+    "@sparticuz/chromium": "^133.0.0",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.5.1",
     "cookie-parser": "^1.4.7",
