--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "cdbreact": "^1.5.19",
     "chart.js": "^4.4.7",
     "date-fns": "^4.1.0",
+    "dayjs": "^1.11.13",
     "formik": "^2.4.6",
     "framer-motion": "^12.6.3",
     "html5-qrcode": "^2.3.8",
