--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "crypto": "^1.0.1",
     "datauri": "^4.1.0",
     "dotenv": "^16.4.5",
+    "exceljs": "^4.4.0",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.1",
