--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.16.1",
+    "react-to-print": "^3.0.6",
     "socket.io-client": "^4.8.1",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5",
